// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`async code that throws 1`] = `
Array [
  Object {
    "firstBarMessage": "❌",
    "hasDecorations": true,
    "newDecorations": Object {
      "correct": true,
      "logData": Object {
        "4": "1",
      },
    },
    "secondBarMessage": undefined,
  },
]
`;

exports[`failed expectation - bothHaveLogsFile 1`] = `
Array [
  Object {
    "firstBarMessage": "❌",
    "hasDecorations": true,
    "newDecorations": Object {
      "correct": true,
      "logData": Object {
        "2": "2",
        "3": "number",
      },
    },
    "secondBarMessage": undefined,
  },
]
`;

exports[`failed expectation - bothHaveLogsSpec 1`] = `
Array [
  Object {
    "firstBarMessage": "❌",
    "hasDecorations": true,
    "newDecorations": Object {
      "correct": true,
      "logData": Object {
        "7": "{ a: 1, b: 2 }",
      },
    },
    "secondBarMessage": undefined,
  },
]
`;

exports[`failed expectation - fileHasLogsFile 1`] = `
Array [
  Object {
    "firstBarMessage": "❌",
    "hasDecorations": true,
    "newDecorations": Object {
      "correct": true,
      "logData": Object {
        "2": "9",
        "3": "number",
      },
    },
    "secondBarMessage": undefined,
  },
]
`;

exports[`failed expectation - fileHasLogsSpec 1`] = `
Array [
  Object {
    "firstBarMessage": "❌",
    "hasDecorations": true,
    "newDecorations": Object {
      "correct": false,
      "logData": Array [
        "9",
        "number",
      ],
    },
    "secondBarMessage": undefined,
  },
]
`;

exports[`failed expectation - specHasLogsFile 1`] = `
Array [
  Object {
    "firstBarMessage": "❌",
    "hasDecorations": true,
    "newDecorations": Object {
      "correct": false,
      "logData": Array [
        "[ 1, 2, 3 ] { a: 1, b: 2 }",
        "1",
      ],
    },
    "secondBarMessage": undefined,
  },
]
`;

exports[`failed expectation - specHasLogsSpec 1`] = `
Array [
  Object {
    "firstBarMessage": "❌",
    "hasDecorations": true,
    "newDecorations": Object {
      "correct": true,
      "logData": Object {
        "4": "[ 1, 2, 3 ] { a: 1, b: 2 }",
        "5": "1",
      },
    },
    "secondBarMessage": undefined,
  },
]
`;

exports[`success - bothHaveLogsFile 1`] = `
Array [
  Object {
    "firstBarMessage": "🐰 st: 0 br: 0 fn: 0 lns: 0",
    "hasDecorations": true,
    "newDecorations": Object {
      "correct": true,
      "logData": Object {
        "2": "2",
        "3": "number",
      },
    },
    "secondBarMessage": undefined,
  },
]
`;

exports[`success - bothHaveLogsSpec 1`] = `
Array [
  Object {
    "firstBarMessage": "🐰 st: 0 br: 0 fn: 0 lns: 0",
    "hasDecorations": true,
    "newDecorations": Object {
      "correct": true,
      "logData": Object {
        "7": "{ a: 1, b: 2 }",
      },
    },
    "secondBarMessage": undefined,
  },
]
`;

exports[`success - fileHasLogsFile 1`] = `
Array [
  Object {
    "firstBarMessage": "🐰 st: 0 br: 0 fn: 0 lns: 0",
    "hasDecorations": true,
    "newDecorations": Object {
      "correct": true,
      "logData": Object {
        "2": "9",
        "3": "number",
      },
    },
    "secondBarMessage": undefined,
  },
]
`;

exports[`success - fileHasLogsSpec 1`] = `
Array [
  Object {
    "firstBarMessage": "🐰 st: 0 br: 0 fn: 0 lns: 0",
    "hasDecorations": true,
    "newDecorations": Object {
      "correct": false,
      "logData": Array [
        "9",
        "number",
      ],
    },
    "secondBarMessage": undefined,
  },
]
`;

exports[`success - specHasLogsFile 1`] = `
Array [
  Object {
    "firstBarMessage": "🐰 st: 100 br: 50 fn: 100 lns: 100",
    "hasDecorations": true,
    "newDecorations": Object {
      "correct": false,
      "logData": Array [
        "[ 1, 2, 3 ] { a: 1, b: 2 }",
        "1",
      ],
    },
    "secondBarMessage": undefined,
  },
]
`;

exports[`success - specHasLogsSpec 1`] = `
Array [
  Object {
    "firstBarMessage": "🐰 st: 100 br: 50 fn: 100 lns: 100",
    "hasDecorations": true,
    "newDecorations": Object {
      "correct": true,
      "logData": Object {
        "4": "[ 1, 2, 3 ] { a: 1, b: 2 }",
        "5": "1",
      },
    },
    "secondBarMessage": undefined,
  },
]
`;

exports[`sync code that throws 1`] = `
Array [
  Object {
    "firstBarMessage": "❌",
    "hasDecorations": true,
    "newDecorations": Object {
      "correct": true,
      "logData": Object {
        "2": "1",
      },
    },
    "secondBarMessage": undefined,
  },
]
`;
